--- a/src/composer.json
+++ b/src/composer.json
@@ -7,7 +7,8 @@
         "ext-mbstring": "*",
         "yiisoft/yii2": "~2.0.24",
         "yiisoft/yii2-bootstrap": "*",
-        "yiisoft/yii2-swiftmailer": "~2.0.7"
+        "yiisoft/yii2-swiftmailer": "~2.0.7",
+        "ext-imagick": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.14",
